# dpdk_dpi

./: .gitignore  CMakeLists.txt  README.md  TODO.md
doc/: Makefile
doc/dia_files/: concept_schema.dia  counters.dia  dpdk_eal.dia  http_alg.dia  idef0_schema.dia  mbuf_matrix.dia  memory_shema.dia  netgraph.dia  pfring_example.dia  rtp_alg.dia  rtsp_alg.dia  sip_alg.dia  sip_structure.dia  state_diagram.dia
doc/tex/: 00-abstract.tex  10-defines.tex  11-abbrev.tex  12-intro.tex  20-analysis.tex  30-design.tex  40-impl.tex  50-economic.tex  60-ecology.tex  80-conclusion.tex  G2-105.sty  preamble.inc.tex  rpz.bib  rpz.out  rpz.tex
doc/utils/: texdepend
pcap/: RTSP.pcap
src/: action.h  cmd_args.cpp  cmd_args.h  common.cpp  common.h  config.cpp  config.h  main.cpp  packet_analyzer.cpp  packet_analyzer.h  packet_manager.cpp  packet_manager.h  port.cpp  port.h  port_manager.cpp  port_manager.h
src/protocols/: http.cpp  rtp.cpp  rtsp.cpp  sip.cpp
test/: CMakeLists.txt  actions.cpp  cmd_args.cpp  config.cpp  main.cpp  utils.cpp  utils.h
test/protocols/: http.cpp  rtp.cpp  rtsp.cpp  sip.cpp
